# RTEngine

./: .gitattributes  Jog In Circle.fbx  README.md  RTGEngine.pyw  build_app.py  forge.py  run.py  studio.py
examples/: 01_piedra.scene  02_piedra_y_luz.scene  03_movimiento.scene  04_colores.scene  05_completo.scene  EJEMPLOS.md  cube.sdf  cube.sdf.json  start.node  start.scene
launcher/: Cargo.toml
launcher/src/: main.rs
rtg/: __init__.py  codegen.py  compiler.py  errors.py  evaluator.py  fbx.py  friendly.py  incarnate.py  lexer.py  lexicon.py  parser.py
rtg-core/: Cargo.toml  README_RUST.md
rtg-core/src/: core.wgsl  imported_mesh.ranim  main.rs  prelude.wgsl  scene.generated.wgsl  scene.live.txt  scene.objects.txt
rtg/tests/: test_engine.py
